#124 closed bug (fixed)
CLAmp window disappears on screenshot
Reported by: | korli | Owned by: | marcusoverhagen |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Has a Patch: | no | Platform: | All |
Description
CLAmp is running, pressing PrintScreen generates a screenshot. Nothing is drawn at CLAmp window place
Attachments (1)
Change History (10)
Changed 13 years ago by
Attachment: | screen1.png added |
---|
comment:1 Changed 13 years ago by
Status: | new → assigned |
---|
It's the same old bug: the screenshot doesn't get the alpha channel right :-/ I'll look into it again (I thought I had already fixed this once...)
comment:3 Changed 13 years ago by
Owner: | changed from axeld to korli@… |
---|
comment:4 Changed 13 years ago by
Status: | assigned → new |
---|
comment:5 Changed 13 years ago by
Owner: | changed from korli@… to marcusoverhagen |
---|
comment:7 Changed 13 years ago by
Resolution: | → fixed |
---|
comment:8 Changed 13 years ago by
Status: | new → closed |
---|
Note: See
TracTickets for help on using
tickets.
CLamp window is transparent