Fixed screenshot function. Creates PNG files without alpha channel now. This should fix bug #124 and makes much nicer screenhots.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16769 a95241bf-73f2-0310-859d-f6bbb57e9c96